adds support for alerts and triggers on group by based sigma rules  (#545)
* fix test

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

* adds support for alerts and triggers on group by based rules

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

* change setting workflow usage enabled to true by default

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

* turn off workflow setting for test

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

* revert new line

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

* support feeding findings to chained finding monitors ONLY from rules mentioned in detector triggers

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

* revert naming convention change for bucket level monitors

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>

---------

Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>